compiler/test-data/parser/arena/errors/missing_arena_name.frel
module test

scheme User {
    id : Uuid .. identity
    name : String
}

arena {
    for User
}
